# structured-data-extractor

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py  services.py
tests/: test_main.py
