[project]
name = "ai-automation-agent-invoice-parser"
version = "0.1.0"
description = "AI agent converting unstructured text/emails into validated JSON orders using Pydantic & Instructor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.126.0",
    "instructor>=1.13.0",
    "openai>=2.13.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]
